Fixed overflow

--- a/src/pages/NotFound/NotFound.module.scss
+++ b/src/pages/NotFound/NotFound.module.scss
@@ -2,6 +2,7 @@
 
 .main {
     height: 100vh;
+    overflow: hidden;
     background-image: url("../../assets/home/background-home-desktop.jpg");
     background-position: top;
     background-size: cover;
